# my_skype

./: .clang-format  .clang-tidy  .gitignore  README.md
server/: CMakeLists.txt
server/src/: Main.cpp
src/clients/: CMakeLists.txt
